Minor fixes of the buttons margins and icon sizes in resume.html on mobile and tablet

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -62,7 +62,7 @@
 // Button
 .link-button {
   @include button;
-  margin-top: 2rem;
+  margin: 2rem 0 1rem 0;
   @media screen and (max-width: 600px) {
     font-size: 15px;
   }
